SG-1235 - fix header alignment

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-form-page.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-form-page.scss
@@ -17,6 +17,7 @@
         flex-direction: row;
         flex: 1 1 auto;
         justify: space-between;
+        align-items: center;
       }
   
       .sfgov-logo__container {
@@ -30,14 +31,12 @@
       }
   
       .head-right--container {
-        @include fs-body-bold;
         float: none;
         text-align: left;
         width: 100%;
         border-top: 3px solid $c-grey-3;
         padding: 15px 0;
         @include media($medium-screen) {
-          @include fs-title-4;
           border-top: none;
           margin: 12px 0 0 0;
           padding: 0;
